Tue, 06 Nov 2007 16:48:51 +0900
User-visible Changes:
	* LAPACK and CBLAS checkers are now overridable from site.cfg

	* CheckF77Mangling and CheckF90Mangling define variables
	NO_APPEND_FORTRAN, UPPERCASE_FORTRAN and UNDERSCORE_G77 (prepended by
	F77_ or F90_ accordingly, e.g. F77_NO_APPEND_FORTRAN). PREPEND not
	supported yet.

	* Basic design explained in doc/DESIGN

Mon, 05 Nov 2007 19:44:07 +0900 (2nd alpha)
User-visible Changes:
	* numpy/distutils/scons/checkers 
	Perflib checkers (MKL, ATLAS, etc...) can be disabled by using
	NAME=None at the environment, and overriden through site.cfg

	* numpy/distutils/scons/checkers 
	LAPACK checker now checks Accelerate and vecLib on Darwin (Mac OS X)

	* numpy/distutils/scons/checkers 
	CBLAS checker supports ATLAS, MKL, Sunperf, and Accelerate/vecLib
	frameworks.

	* numpy/distutils/scons/fortrahn 
	Fortran checkers for name mangling and link options for C/Fortran
	interop added

	* Basic documentation on wiki

	* sdist command now works

	* show_config knows show meaningful informations (per package
	configuration).

Internal changes:
	* Compilation options are now found from a CompilerConfig object, for
	easier customization.

	* Heavy refactorization of perflib checkers; most of the code is now
	shared by all of them.

	* Configuration options for libraries checkers is now passed through
	configuration object